test_case/rust-lang_rust/12262_35172501.rs
 rust
macro_rules! foo { () => { break 'x; } } //~ ERROR use of undeclared label `x`

fn main() {
    'x: loop { foo!() }
}
